# doniyorgram-desktop

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/doniyorgram_desktop/: __init__.py  client.py  crypto.py  server.py
tests/: test_crypto.py
